Add cors Setup jwt auth Simple login screen

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - db
 
   node:
-    command: sh -c "yarn install && yarn start"
+    command: sh -c "npm install && npm start"
     build: ./frontend
     volumes:
       - ./frontend:/usr/src/app
